--- a/vignettes/PhONA.Rmd
+++ b/vignettes/PhONA.Rmd
@@ -29,7 +29,7 @@ PhONA provides a framework to select a testable and manageable number of OTUs to
 # devtools::install_github("ravinpoudel/PhONA", build_vignettes = TRUE, force = TRUE, auth = "5c5decd148f0378dcb762e7b14c3d1508ef49ba2")
 
 # Browse Vignettes to see the output as below. 
-
+ 
 # browseVignettes("PhONA")
 ```
 
@@ -93,7 +93,7 @@ Role analyses using SA algorithm implemented in rnetcarto package.
 
 ```{r, cache=TRUE}
 
-#rolePlot(example_lm)
+rolePlot(example_lm)
 
 ```
 
@@ -131,7 +131,7 @@ kable(summarizePhONA(example_lasso$phona_graph, example_lasso$roles))
 
 ```{r, cache=TRUE}
 
-# rolePlot(example_lasso)
+rolePlot(example_lasso)
 
 ```
 
